performance improvement - adding css command for google fonts to Ensure text remains visible during webfont load. Earlier performance score was 70 in Lighthouse.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -805,7 +805,7 @@ section {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/poppins-v20-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/poppins-v20-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -815,7 +815,7 @@ section {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 700;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/poppins-v20-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/poppins-v20-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -824,7 +824,7 @@ section {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/open-sans-v34-latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/open-sans-v34-latin-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -834,7 +834,7 @@ section {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/open-sans-v34-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/open-sans-v34-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -844,7 +844,7 @@ section {
   font-family: 'Open Sans';
   font-style: italic;
   font-weight: 300;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/open-sans-v34-latin-300italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/open-sans-v34-latin-300italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -854,7 +854,7 @@ section {
   font-family: 'Open Sans';
   font-style: italic;
   font-weight: 400;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/open-sans-v34-latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/open-sans-v34-latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -863,7 +863,7 @@ section {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 300;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/raleway-v28-latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/raleway-v28-latin-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -873,7 +873,7 @@ section {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 400;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/raleway-v28-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/raleway-v28-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -883,7 +883,7 @@ section {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/raleway-v28-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/raleway-v28-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -893,7 +893,7 @@ section {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 600;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/raleway-v28-latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/raleway-v28-latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -903,7 +903,7 @@ section {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 700;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/raleway-v28-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/raleway-v28-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -913,7 +913,7 @@ section {
   font-family: 'Raleway';
   font-style: italic;
   font-weight: 300;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/raleway-v28-latin-300italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/raleway-v28-latin-300italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -923,7 +923,7 @@ section {
   font-family: 'Raleway';
   font-style: italic;
   font-weight: 400;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/raleway-v28-latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/raleway-v28-latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -933,7 +933,7 @@ section {
   font-family: 'Raleway';
   font-style: italic;
   font-weight: 500;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/raleway-v28-latin-500italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/raleway-v28-latin-500italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -943,7 +943,7 @@ section {
   font-family: 'Raleway';
   font-style: italic;
   font-weight: 600;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/raleway-v28-latin-600italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/raleway-v28-latin-600italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -953,7 +953,7 @@ section {
   font-family: 'Raleway';
   font-style: italic;
   font-weight: 700;
-  src: local(''),
+  font-display: swap; src: local(''),
        url('../fonts/raleway-v28-latin-700italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/raleway-v28-latin-700italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
